[FIX] -> conection js, mesuvisible, background white (@media)

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ html{
     border-radius: 5px;
     cursor: pointer;
     display: none;
+    z-index: 1000;
 }
 
 .inicio{
@@ -458,13 +459,14 @@ html{
 }
 
 @media screen and (max-width:980px) {
-    nav{
-        display:none;
+    .inicio .content-banner .container-img img{
+        max-width: 100%;
+        height: auto;
     }
     .nav-responsive{
         display: block;
     }
-    .nav-responsive{
+    nav.responsive{
         display: block;
         position: absolute;
         right: 0;
@@ -472,16 +474,20 @@ html{
         background-color: #252A2E;
         width: 180px;
     }
-    nav .responsive ul{
+    nav.responsive ul{
         display: block !important;
     }
-    nav .responsive ul li{
+    nav.responsive ul li{
         border-bottom: 1px solid #fff;
         padding: 10px 0;
     }
 }
 
 @media screen and (max-width: 700px){
+    .inicio .content-banner .container-img img{
+        max-width: 100%;
+        height: auto;
+    }
     .aboutme .row {
         display: block;
     }
